--- a/app/src/main/res/layout/dialog_scrap.xml
+++ b/app/src/main/res/layout/dialog_scrap.xml
@@ -104,6 +104,7 @@
             android:selectAllOnFocus="true"
             android:text="1"
             android:textAlignment="center"
+            android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="60sp"
             android:textStyle="bold"
