--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -337,6 +337,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lyp_Cilindro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -361,6 +362,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lyp_Z_AltoMasGap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -385,6 +387,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lyp_EtiquetasPorRollo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -409,6 +412,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lyp_Pistas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
@@ -433,6 +437,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lyp_MetrosAImprimir"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
@@ -457,6 +462,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lyp_MetrosPorRollo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
@@ -481,6 +487,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/lyp_Descripcion"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
@@ -501,6 +508,81 @@
                 android:inputType="textPersonName"
                 android:text="informacion"
                 android:textSize="10sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lyp_Observaciones"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="Observaciones"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/produccion_txt_Observaciones"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:inputType="textPersonName"
+                android:text="obser"
+                android:textSize="14sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lyp_MetrosMatTroquelar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="MetrosMatTroquelar"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/produccion_txt_MetrosMatTroquelar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:inputType="textPersonName"
+                android:text="0"
+                android:textSize="14sp"
+                tools:ignore="TouchTargetSizeCheck" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lyp_TroquelId"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:text="TroquelId"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/produccion_txt_TroquelId"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:inputType="textPersonName"
+                android:text="0"
+                android:textSize="14sp"
                 tools:ignore="TouchTargetSizeCheck" />
         </LinearLayout>
 
