--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -9,7 +9,6 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
@@ -17,14 +16,14 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
+        app:layout_constraintStart_toStartOf="@+id/linearLayotCargarDatos"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView24"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="20dp"
             android:text="Pedido"
             android:textAlignment="center"
             android:textSize="20sp"
@@ -50,41 +49,41 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView38"
+                        android:id="@+id/textView44"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="SerieYNro"
+                        android:layout_weight="4"
+                        android:text="Concepto"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView40"
+                        android:id="@+id/ver_txt_Concepto"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="SerieYNro" />
+                        android:text="Concepto" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView45"
+                        android:id="@+id/textView41"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="Cantidad"
+                        android:layout_weight="2"
+                        android:text="ArticuloId"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView46"
+                        android:id="@+id/ver_txt_ArticuloId"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Cantidad" />
+                        android:text="ArticuloId" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -103,41 +102,41 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView44"
+                        android:id="@+id/textView38"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="Concepto"
+                        android:layout_weight="4"
+                        android:text="SerieYNro"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView43"
+                        android:id="@+id/ver_txt_SerieYNro"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Concepto" />
+                        android:text="SerieYNro" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView41"
+                        android:id="@+id/textView45"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="ArticuloId"
+                        android:layout_weight="2"
+                        android:text="Cantidad"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView42"
+                        android:id="@+id/ver_txt_Cantidad"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="ArticuloId" />
+                        android:text="Cantidad" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -572,7 +571,7 @@
         android:id="@+id/linearLayotCargarDatos"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         android:orientation="vertical"
@@ -870,6 +869,7 @@
         android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="@+id/textView16"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
